# AgentShield-MCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/agentshield-audit/: Cargo.toml
crates/agentshield-audit/src/: error.rs  lib.rs  report.rs  sqlite.rs
crates/agentshield-cli/: Cargo.toml
crates/agentshield-cli/src/: approver.rs  dashboard.rs  main.rs  memory.rs  wiring.rs
crates/agentshield-core/: Cargo.toml
crates/agentshield-core/src/: config.rs  error.rs  ids.rs  lib.rs  memory.rs  redact.rs  types.rs
crates/agentshield-dashboard/: Cargo.toml
crates/agentshield-dashboard/src/: lib.rs
crates/agentshield-policy/: Cargo.toml
crates/agentshield-policy/src/: lib.rs  model.rs
crates/agentshield-proxy/: Cargo.toml
crates/agentshield-proxy/src/: aggregate.rs  classify.rs  gateway.rs  http.rs  jsonrpc.rs  lib.rs  transport.rs
crates/agentshield-risk/: Cargo.toml
crates/agentshield-risk/src/: lib.rs
crates/agentshield-rules/: Cargo.toml
crates/agentshield-rules/src/: database.rs  file.rs  lib.rs  shell.rs
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.vue  main.ts  style.css
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/api/: index.ts
desktop/src/components/: EChart.vue  StatCard.vue
desktop/src/pages/: AuditLogs.vue  Dashboard.vue  LiveEvents.vue  Memory.vue  Reports.vue  Servers.vue
desktop/src/plugins/: antdv.ts
desktop/src/router/: index.ts
desktop/src/utils/: format.ts
docs/: AgentShield_MCP_需求文档.md  architecture.md  changelog.md  client-config.md  examples.md  faq.md  mcp-proxy.md  policy.md  quick-start.md  risk-engine.md
docs/design/: 01-core.md  02-proxy.md  03-policy.md  04-risk.md  05-rules.md  06-approval.md  07-cli.md  08-audit.md  09-desktop.md  README.md
policies/: default.yaml  enterprise.yaml  read-only.yaml  strict.yaml
