[workspace]
resolver = "2"
members = [
    "crates/agentshield-core",
    "crates/agentshield-rules",
    "crates/agentshield-risk",
    "crates/agentshield-policy",
    "crates/agentshield-audit",
    "crates/agentshield-proxy",
    "crates/agentshield-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/your-name/agentshield-mcp"
authors = ["AgentShield MCP Contributors"]

# 工作区统一管理依赖版本，各 crate 用 { workspace = true } 引用
[workspace.dependencies]
agentshield-core = { path = "crates/agentshield-core" }
agentshield-rules = { path = "crates/agentshield-rules" }
agentshield-risk = { path = "crates/agentshield-risk" }
agentshield-policy = { path = "crates/agentshield-policy" }
agentshield-audit = { path = "crates/agentshield-audit" }
agentshield-proxy = { path = "crates/agentshield-proxy" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = "2"

[profile.release]
strip = true
lto = "thin"
