[package]
name = "agentshield-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentShield MCP 审计存储与报告"

# JSONL 负责崩溃安全的追加写，SQLite（rusqlite bundled）负责结构化查询与报告。
[dependencies]
agentshield-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
