[package]
name = "agentshield-rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentShield MCP 内置风险规则库（shell / file / database）"

[dependencies]
agentshield-core.workspace = true
regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
serde_json.workspace = true
chrono.workspace = true
